# bazel_test

./: .bazelrc  .gitattributes  BUILD.bazel  MODULE.bazel  NOTE.md  TODO.md
src/foo/: BUILD.bazel  main.cpp
src/hello_world/: BUILD.bazel
src/simplang/: BUILD.bazel  main.cpp  slg.bzl
src/simplang_test/: BUILD.bazel  example.slg
toolchains/simplang/: BUILD.bazel  toolchain.bzl
