"""
This module configures the project's dependencies and extensions.

It declares direct dependencies using 'bazel_dep' and sets up necessary
module extensions. Ensure that all required modules are specified here
to maintain consistency across the build process.
"""

bazel_dep(name = "rules_cc", version = "0.1.1")